--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<!DOCTYPE html>
 
+<html>
+
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <title></title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="index.css">
+    </head>
+
+    <body> 
+      <h1>Yay it's Friday</h1>
+      <h1>It's soon the weekend</h1>
+      <button onclick="myFunction()">Click me</button>
+        
+        <script src="index.js" async defer></script>
+    </body>
+</html>
